--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "tsc && node lib/index.js",
     "build": "tsc",
+    "prepare": "npm run build",
+    "clean": "rm lib -rf",
     "test": "npm run build && node lib/index.js -s ./.test/sourcefolder -p ./.test/proxyfolder -b ./.test/backupfolder -g proxyglob/**/target/ --watch \"npm -v\""
   },
   "files": [
