--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^15.0.2",
     "@types/prompt": "^1.1.0",
     "@types/yargs": "^16.0.1",
+    "path-parse": "^1.0.7",
     "tslint": "^6.1.3",
     "typescript": "^4.2.4"
   },
