--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -6,7 +6,8 @@ name: Node.js Package
 on:
   release:
     types: [created,published]
-
+  workflow_dispatch:
+  
 jobs:
   build:
     runs-on: ubuntu-latest
